# Self_Healing

./: main.py  mlflow.db  pyproject.toml
data/raw/: live_drifted.csv  live_normal.csv  train.csv
inference/: app.py  drift_checker.py  model_loader.py
mlruns/1/models/m-186ba4c09c0844d58e468e3395599362/artifacts/: MLmodel  registered_model_meta  requirements.txt
mlruns/1/models/m-186ba4c09c0844d58e468e3395599362/artifacts/data/: model.pth
mlruns/1/models/m-64421d502e164774927a56a8ef9c3515/artifacts/: MLmodel  conda.yaml
mlruns/1/models/m-64421d502e164774927a56a8ef9c3515/artifacts/data/: model.pth
mlruns/1/models/m-add8d4ce168840be903dcc988819dbaf/artifacts/: MLmodel  registered_model_meta
mlruns/1/models/m-add8d4ce168840be903dcc988819dbaf/artifacts/data/: model.pth
mlruns/1/models/m-d97c549829b6490cabe2be8aed991da5/artifacts/: MLmodel  registered_model_meta
mlruns/1/models/m-d97c549829b6490cabe2be8aed991da5/artifacts/data/: model.pth
mlruns/1/models/m-f1d17f2567bb4ccdac17d97a3c833c8a/artifacts/: MLmodel
mlruns/1/models/m-f1d17f2567bb4ccdac17d97a3c833c8a/artifacts/data/: model.pth
monitoring/: metrics.py
pipelines/: auto_healer.py  evaluate_model.py  healer.py  retrain_pipeline.py
training/: drift_autoencoder.pt  drift_autoencoder.py  generate_data.py  generate_live_data.py  train_model.py
ui/: app.py
